# what-are-we-eating-today

./: .Dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  addwbwusercommand.py  bot.py  pyproject.toml  settings.py  test_bot_live.py  test_bot_offline.py
.github/workflows/: deploy.yaml  test.yaml
queries/: add_vote_message.sql  count.sql  init_db.sql  latest_vote_message.sql  set_choice.sql
