[tool.poetry]
name = "what-are-we-eating-today"
version = "0.1.0"
description = "Slack bot which helps us choose what to eat, and who is going to buy the food"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/thaliawww/what-are-we-eating-today"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"
pytest-cov = "^2.6"
pugsql = "^0.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pytest = "^5.1"
black = {version = "^19.3b0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
